<resources>
    <string name="app_name">Kitchen Help</string>
    <string name="hotel_name">MalvernVale Hotel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_admin_view_roster">View Roster</string>
    <string name="under_construction">Under Construction</string>
    <string name="menu_create_roster">Create/Edit Roster</string>
    <string name="menu_create_user">Create Employee Account</string>
    <string name="menu_set_availability">Set My Availability</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password">Change Password</string>
    <string name="name">Name</string>
    <string name="repeat_email">Repeat Email</string>
    <string name="phone">Phone</string>
    <string name="sign_up">Sign Up</string>
    <string name="menu_logout">Log Out</string>
    <string name="title_activity_login">LogIn</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="update">Update My Details</string>
    <string name="delete_user">Delete User</string>
    <string name="view_availability">View Availability</string>
    <string name="done">Done</string>
    <string name="admin_option">Admin Options</string>

    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="shift_start">Shift Start</string>
    <string name="shift_end">Shift End</string>
    <string name="day">Days</string>
    <string name="full_day">Available</string>
    <string name="from">START</string>
    <string name="to">END</string>
    <string name="select_time"><u>Select Time</u></string>

    <string name="title_activity_home">Kitchen Helper</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="old_password_again">Repeat Old Password</string>
    <string name="new_password">New Password</string>
    <string name="forgotPassword"> Forgot or Change Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_newUser">Create User</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
