<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_staff_view_roaster"
            android:title="@string/menu_admin_view_roster" />
        <item
            android:id="@+id/nav_staff_set_availability"
            android:title="@string/menu_set_availability" />
        <item
            android:id="@+id/nav_staff_change_password"
            android:icon="@drawable/ic_settings_applications_black_24dp"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_staff_edit_details"
            android:icon="@drawable/ic_settings_applications_black_24dp"
            android:title="@string/update" />
        <item
            android:id="@+id/nav_staff_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>


</menu>
