<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayoutViewRosterAdminRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewEmailViewRosterAdmin"
                android:text="@string/email"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewSundayViewRosterAdmin"
                android:text="@string/sunday"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewMondayViewRosterAdmin"
                android:text="@string/monday"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewTuesdayViewRosterAdmin"
                android:text="@string/tuesday"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewWednesdayViewRosterAdmin"
                android:text="@string/wednesday"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewThursdayViewRosterAdmin"
                android:text="@string/thursday"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewFridayViewRosterAdmin"
                android:text="@string/friday"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewSaturdayViewRosterAdmin"
                android:text="@string/saturday"
                android:textAlignment="center"
                android:textStyle="bold" />
        </TableRow>


    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>