<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/day"
                android:textAlignment="center"
                android:textStyle="bold" />
            <TextView
                android:text="@string/full_day"
                android:textAlignment="center"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/sunday"
                android:textAlignment="center"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/availabilitySundayAllDay"
                android:checked="true" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/monday"
                android:textAlignment="center"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/availabilityMondayAllDay"
                android:checked="true" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/tuesday"
                android:textAlignment="center"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/availabilityTuesdayAllDay"
                android:checked="true" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/wednesday"
                android:textAlignment="center"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/availabilityWednesdayAllDay"
                android:checked="true" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/thursday"
                android:textAlignment="center"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/availabilityThursdayAllDay"
                android:checked="true" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/friday"
                android:textAlignment="center"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/availabilityFridayAllDay"
                android:checked="true" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/saturday"
                android:textAlignment="center"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/availabilitySaturdayAllDay"
                android:checked="true" />

        </TableRow>
    </TableLayout>

    <ProgressBar
        android:id="@+id/progressBarSetAvailability"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSetAvailability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/menu_set_availability"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>