<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_admin_create_roaster"
            android:icon="@drawable/ic_create_black_24dp" />
        <item
            android:id="@+id/nav_admin_create_user"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/menu_create_user" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_video_library_black_24dp"
            android:title="Upload Prep Videos" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_file_upload_black_24dp"
            android:title="Upload Stock Info" />
        <item
            android:id="@+id/nav_admin_change_password"
            android:icon="@drawable/ic_settings_applications_black_24dp"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_admin_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>
