<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
            android:text="@string/day"
            android:textAlignment="center"
            android:textStyle="bold" />

            <TextView
                android:text="@string/from"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:text="@string/to"
                android:textAlignment="center"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/sunday"
                android:textAlignment="center"
                android:textStyle="bold" />
            <TextView
                android:text="@string/select_time"
                android:id="@+id/sundayStartAdmin"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:text="@string/select_time"
                android:id="@+id/sundayEndAdmin"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/monday"
                android:textAlignment="center"
                android:textStyle="bold" />
            <TextView
                android:text="@string/select_time"
                android:id="@+id/mondayStartAdmin"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:text="@string/select_time"
                android:id="@+id/mondayEndAdmin"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/tuesday"
                android:textAlignment="center"
                android:textStyle="bold" />
            <TextView
                android:text="@string/select_time"
                android:id="@+id/tuesdayStartAdmin"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:text="@string/select_time"
                android:id="@+id/tuesdayEndAdmin"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/wednesday"
                android:textAlignment="center"
                android:textStyle="bold" />
            <TextView
                android:text="@string/select_time"
                android:id="@+id/wednesdayStartAdmin"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:text="@string/select_time"
                android:id="@+id/wednesdayEndAdmin"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/thursday"
                android:textAlignment="center"
                android:textStyle="bold" />
            <TextView
                android:text="@string/select_time"
                android:id="@+id/thursdayStartAdmin"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:text="@string/select_time"
                android:id="@+id/thursdayEndAdmin"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/friday"
                android:textAlignment="center"
                android:textStyle="bold" />
            <TextView
                android:text="@string/select_time"
                android:id="@+id/fridayStartAdmin"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:text="@string/select_time"
                android:id="@+id/fridayEndAdmin"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/saturday"
                android:textAlignment="center"
                android:textStyle="bold" />
            <TextView
                android:text="@string/select_time"
                android:id="@+id/saturdayStartAdmin"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:text="@string/select_time"
                android:id="@+id/saturdayEndAdmin"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>